--- a/todo-appliccation/backend/src/main/resources/application.properties
+++ b/todo-appliccation/backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/todo
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen DB
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto
+spring.jpa.hibernate.ddl-auto=update
 
