--- a/todo-appliccation/frontend/package.json
+++ b/todo-appliccation/frontend/package.json
@@ -29,6 +29,8 @@
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
+    "highcharts": "^10.1.0",
+    "highcharts-react-official": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
