--- a/todo-appliccation/frontend/.babelrc
+++ b/todo-appliccation/frontend/.babelrc
@@ -1,4 +1,12 @@
 {
-	"presets": ["@babel/preset-env", "@babel/preset-react"],
-	"plugins": ["@babel/plugin-transform-runtime"]
+    "presets": [
+        "@babel/preset-env",
+        [
+            "@babel/preset-react",
+            {
+                "runtime": "automatic"
+            }
+        ]
+    ],
+    "plugins": ["@babel/plugin-transform-runtime"]
 }
