--- a/todo-appliccation/frontend/package.json
+++ b/todo-appliccation/frontend/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server .",
-    "build": "Webpack ."
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.18.5",
-    "@babel/plugin-transform-runtime": "^7.18.5",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-react": "^7.17.12",
-    "@babel/runtime": "^7.18.3",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
-    "file-loader": "^6.2.0",
-    "imports-loader": "^4.0.0",
-    "less-loader": "^11.0.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
-  },
-  "dependencies": {
-    "highcharts": "^10.1.0",
-    "highcharts-react-official": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+    "name": "frontend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest",
+        "start": "webpack-dev-server .",
+        "build": "Webpack ."
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/core": "^7.18.5",
+        "@babel/plugin-transform-runtime": "^7.18.5",
+        "@babel/preset-env": "^7.18.2",
+        "@babel/preset-react": "^7.17.12",
+        "@babel/runtime": "^7.18.3",
+        "@testing-library/react": "^13.3.0",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.2.5",
+        "css-loader": "^6.7.1",
+        "file-loader": "^6.2.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.73.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.9.2"
+    },
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.4",
+        "highcharts": "^10.1.0",
+        "highcharts-react-official": "^3.1.0",
+        "jest-cli": "^28.1.1",
+        "jest-environment-jsdom": "^28.1.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^5.2.0"
+    }
 }
