--- a/todo-appliccation/frontend/package.json
+++ b/todo-appliccation/frontend/package.json
@@ -18,6 +18,7 @@
         "@babel/preset-react": "^7.17.12",
         "@babel/runtime": "^7.18.3",
         "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^14.2.1",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.5",
         "css-loader": "^6.7.1",
