--- a/todo-appliccation/frontend/package.json
+++ b/todo-appliccation/frontend/package.json
@@ -38,6 +38,7 @@
         "msw": "^0.42.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^5.2.0"
+        "react-hot-loader": "^4.13.0",
+        "react-router-dom": "^6.3.0"
     }
 }
